UI: Ola SimLovers + admin design melhorado com gradientes e icones

--- a/simlover-requisicao.html
+++ b/simlover-requisicao.html
@@ -15,8 +15,8 @@
 
     <div class="container">
         <div class="welcome-message">
-            <h2>Fale Conosco</h2>
-            <p>Solicite informações sobre impressoras, serviços e soluções</p>
+            <h2>Olá SimLovers! 👋</h2>
+            <p>Solicite informações sobre impressoras, peças, toners e soluções para seu laboratório</p>
         </div>
 
         <form action="processa-requisicao.php" method="POST" class="simlover-form">
