Remove mencao a impressoras do texto principal

--- a/simlover-requisicao.html
+++ b/simlover-requisicao.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="welcome-message">
             <h2>Olá SimLovers! 👋</h2>
-            <p>Solicite informações sobre impressoras, peças, toners e soluções para seu laboratório</p>
+            <p>Solicite informações sobre peças, toners e soluções para seu laboratório</p>
         </div>
 
         <form action="processa-requisicao.php" method="POST" class="simlover-form">
